schema/testdata/validation_operation_where_expression_unresolvable_rhs/schema.keel
model Profile {
    fields {
        identity Identity {
            @unique
        }
        username Text {
            @unique
        }
    }

    operations {
        get getProfile(username) {
            @where(profile.identity = context.identity)
        }
    }
}
