schema/testdata/errors/operation_where_too_many_arguments.keel
model Profile {
    fields {
        identity Identity @unique
        username Text @unique
    }

    actions {
        get getProfile(username) {
            //expect-error:13:14:E024:2 argument(s) provided to @where but expected 1
            @where(
                profile.identity == ctx.identity,
                profile.username == "adaam2"
            )
        }
    }
}
